styles/positioning.css
body {
  padding: 4rem 0 0;
}
<style>

nav {
  text-align: justify;
}
nav ul {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  padding-right: 2rem;
  padding-left: 2rem;
  font-size: 1.5rem;
  background-color: gray;
}

nav li a:link {
  color:purple;
  text-align: center;
}
nav li a:visited {
  color:rebeccapurple;
}
nav li a:active{
  color:rebeccapurple;
}
.LinkLeftBig{
  text-align: right;
  font-size: 1.7rem;
}

.Offset{
  padding-left: 2rem
}

.BannerBackground {
  background-color: black;
}
header {
  top: 0;
  width: 100%;
  text-align: right;
  left: 5px; 
  right: 5px;
  margin: 0;
  padding: 0;
}
header h1{
  color:white;
  font-size: 3em;
  font-weight: 100;
  margin: 0;
  padding: 0;
  text-align: left;
}

header h3{
  color:gray;
  font-size: 1.25em;
  font-weight: 100;
  padding: 0;
  margin: 0;
  text-align: left;
}
header a:link{
  color:red;
}

header a:visited {
  color:red;
}
header a:active{
  color:red;
}

article p{
  position:relative;
  width: 25rem;
  height 7rem;
  padding: 0;
  margin: 0;
  font-size: 1.25rem;
}

.CatOfTheWeek{
  position: absolute;
  width: 22rem;
  height: 35rem;
  top: 250px;
  right: 250px;
  border: 1px solid black;
}

img {
  height: 120px;
  width: 160px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

aside h2{
  text-align: center;
}

aside h3{
  text-align: center;
}

aside p{
  text-align: right;
  padding: 1px;
}

aside a:link{
  color:red;
}

aside a:visited {
  color:red;
}
aside a:active{
  color:red;
}
footer{
  position:absolute;
  top: 800px; 
  left: 5px; 
  right: 5px;
  margin: 0;
  padding: 1rem;
}
footer p{
  color: white;
  font-size: 1rem;  
  padding: 0;
  margin: 0;
}
footer h5{
  color:white;
  font-size: 1rem;
  text-align: center;
  font-weight: 100;
  padding: 0;
  margin: 0;
}
footer a:link{
  color:red;
}

footer a:visited {
  color:red;
}
footer a:active{
  color:red;
}

